# Minimal-Telegram-Bot

./: ScannerNotifier.py  config.json  main.py  pyproject.toml  readme.md
tests/: test.py
ykkTelegramBot/: TelegramNotifier.py  __init__.py
